ggplot2 0.8.4  (2008-XX-XX)
----------------------------------------

* always sort input to geom_ribbon
* stat_spoke now works with reversed scales
* corrected list of aesthetics to include american spelling of colour as well as base R abbreviations
* position_stack: fixed bug in detection of overlap for negative values